2003-07-21  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Alex_Wallis/*:
	added logo of alex wallis

2003-07-18  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* customize_theme/theme_descriptions_helper.inc: 
	* definitions.inc: 
	fixed problems using cookies for theme ond style selection. 

2003-07-17  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* web-theme/classes/pager_on_top_class.inc:
	* web-theme/themes/pager_on_top_theme.inc:
	* web-theme/themes/theme_descriptions.inc:
	* web-theme/themes/plain_theme.inc:
	changed theme to "pager on top theme"
	
2003-07-16  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Russell_Martin/*:
	added logo of russel martin

2003-07-16  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Anthony_Lee/index.php: 
	* logo-competition/logos_new.php:
	added two more logos
	
2003-07-15  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Geoffroy_Giraux/: 
	* logo-competition/logos/Annemarie_Rowson/:
	* logo-competition/logos/Anthony_Lee/:
	added new logos
	
2003-07-11  Uwe Pross  <uwe.pross@gmx.net>

	* fvwm-cats/*.php: 
	fixed links from cat page to index.php

	* authors/index.php:
	fixex link to picture page

2003-07-10  Uwe Pross  <uwe.pross@gmx.net>

	* navgen.cli:
	* *.php:
	fixed problem with loading definitions.inc when using command line
	interface. reduced debugging info of navgen.
	
	* documentation/dev_webpage/index.php: 
	started documentation of web site. contents are hidden at the
	moment and visible with <url>?show=1
	
	* web-theme/classes/birthday_class.inc: 
	changed algorithm to build a navigation desktop so that desktops
	with more than 4 pages grow horizontaly.

2003-07-08  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php:
	* logo-competition/logos/Stephen_Ford/*:
	* logo-competition/logos/Anand_Tanna/*:
	* logo-competition/logos/Christopher_Culp/*: